// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when no text is passed as prop 1`] = `
<td
  className="px-2 border-collapse border border-gray-400"
/>
`;

exports[`renders when text is passed as prop 1`] = `
<td
  className="px-2 border-collapse border border-gray-400"
>
  0.987
</td>
`;
